# stringmatch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  build_sdist.yml  build_wheels.yml  cov.yml  install.yml  linting.yml  testing.yml
docs/: basic_usage.md  index.md  installation.md  requirements.txt
docs/advanced_usage/: custom_scorer.md  kwargs.md  partial_matches.md  scorer.md
docs/usage/: distance.md  match.md  ratio.md  scorer.md  strings.md
examples/: README.md
examples/basic/: basic_match.py  basic_ratio.py  best_match.py  with_ratio.py
examples/custom/: limit_score.py  modify_search.py  partial_match.py  scorers.py
examples/other/: benchmark.py  misc.py
searchlib/: __init__.py  exceptions.py  match.py  ratio.py  strings.py
stringmatch/: __init__.py  args.py  distance.py  exceptions.py  match.py  ratio.py  scorer.py  strings.py
tests/: test_distance.py  test_match.py  test_ratio.py  test_strings.py
