[build-system]
requires = ["setuptools", "setuptools-scm", "mypy"]
build-backend = "setuptools.build_meta"

[tool.black]
line_length=88

[tool.isort]
profile="black"

[tool.cibuildwheel]
skip="pp*"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py313, py312, py311, py310, py39

[testenv]
deps = pytest
"""